# devsecops-demo

./: .gitignore  README.md  config.alloy
backend/: .containerignore  .dockerignore  Dockerfile  app.db  main.py  podman-deployment.yaml  pyproject.toml  requirements.txt
frontend/: Dockerfile  index.html  nginx-insecure.conf  nginx-secure.conf  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts  style.css
k8s/: all-in-one-cilium-prod.yaml  all-in-one-cilium.yaml  all-in-one-pangolin.yaml  all-in-one.yaml  backend-deployment.yaml  database-statefulset.yaml  frontend-configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  local.yaml
local-podman-setup/: README.md  config.alloy  deployment.yaml  nginx.conf
production/backend/: Dockerfile  go.mod  go.sum  main.go
